Home.scss - Fix collapsing margin

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,5 +1,5 @@
 .home {
-  background-color: beige;
+  background-color: #fefefe;
   height: 100%;
-
+  padding-bottom: 0.1px; //remove collapsing margins
 }
